first change test

--- a/Exercícios - ExerciciosComStrings.ipynb
+++ b/Exercícios - ExerciciosComStrings.ipynb
@@ -214,8 +214,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "texto = input(\"Digite alguma coisa:\")\n",
-    "\n"
+    "texto = input(\"Digite alguma coisa:\")"
    ]
   }
  ],
