--- a/Exercícios - do slides Aula 1.ipynb
+++ b/Exercícios - do slides Aula 1.ipynb
@@ -50,7 +50,9 @@
    "source": [
     "raio = float(input(\"Digite o raio do círculo em cm:\"))\n",
     "\n",
-    "print(f\"O perímetro do círculo é de {3.14*2*raio}\")"
+    "print(f\"O perímetro do círculo é de {3.14*2*raio}\")\n",
+    "\n",
+    "print(\"teste\")"
    ]
   },
   {
